Removed scrollbars + fixed file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,3 +7,7 @@ canvas{
     font-family: 'Spacecomics';
     background-image: url("../img/background/background.png");
 }
+
+body {
+    overflow: hidden;
+}
